---
source: spade-tests/src/ast_lowering.rs
---
extern fn multiple(foo: bool, bar: bool, foo: bool);

error: Multiple arguments with the same name
  ┌─ testinput:1:42
  │
1 │ extern fn multiple(foo: bool, bar: bool, foo: bool);
  │                    ---                   ^^^ foo later declared here
  │                    │                      
  │                    foo previously declared here
